# kaldi-training-data-formatter-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kaldi_training_data_formatter/: __init__.py  __main__.py  abstract_file_reader.py  app.py  chapter.py  chapters_compiler.py  files_util.py  lexicon_compiler.py  project_util.py  speaker.py  speakers_reader.py  speakers_writer.py  subset_sorter.py  transcript_line.py  transcript_reader.py  transcript_writer.py  vocab_compiler.py
tests/case/: file_test_case.py
tests/resources/: expected-lexicon-1.txt  expected-lexicon-2.txt  expected-lexicon-AB.txt  expected-vocab.txt
tests/resources/input/: test-import-lexicon-A.txt  test-import-lexicon-B.txt  test-import-lexicon-no-phones.txt  test-transcript.trans.txt
tests/unit/: test_chapter.py  test_lexicon_compiler.py  test_transcript_line.py  test_transcript_reader.py  test_vocab_compiler.py
