[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kaldi-data-formatter"
authors = [
    { name = "Bishop Johnson" }
]
maintainers = [
    { name = "Bishop Johnson" }
]
version = "1.0.0"
requires-python = ">= 3.12"
dependencies = [
]
description = "Script for formatting singing training data for Kaldi-ASR"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
classifiers = [
    "Programming Language :: Python"
]

[project.urls]
"Repository" = "https://github.com/BishopJohnson/kaldi-training-data-formatter-python.git"
"Issues" = "https://github.com/BishopJohnson/kaldi-training-data-formatter-python/issues"

[project.scripts]
kaldi-format-cli = "kaldi_training_data_formatter.app:cli"

[tools.setuptools]
package-dir = { "" = "src" }
